Services Page UI

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <div class="navbar bg-base-100">
   <div class="flex-1">
-    <a class="text-xl" href="/">
+    <a class="text-xl" routerLink="/">
       <img class="w-20 h-20" src="./assets/images/logo.png" alt="logo"/>
     </a>
   </div>
