--- a/src/app/pages/home/hero/hero.component.html
+++ b/src/app/pages/home/hero/hero.component.html
@@ -13,7 +13,7 @@
           </svg>
           <h2 class="text-xl font-semibold mb-2">Explore Services</h2>
           <p class="mb-4">Discover and access a wide range of public services.</p>
-          <button class="bg-black text-white px-4 py-2 rounded hover:bg-blue-600 transition duration-300">Learn More</button>
+          <button (click)="goToServices()" class="bg-black text-white px-4 py-2 rounded hover:bg-blue-600 transition duration-300">Learn More</button>
         </div>
 
         <div class="bg-white p-6 rounded-lg shadow-md hover:shadow-lg transition duration-300">
@@ -22,7 +22,7 @@
           </svg>
           <h2 class="text-xl font-semibold mb-2">Submit Feedback</h2>
           <p class="mb-4">Share your thoughts and help us improve our services.</p>
-          <button class="bg-black text-white px-4 py-2 rounded hover:bg-green-600 transition duration-300">Give Feedback</button>
+          <button (click)="goToFeedback()" class="bg-black text-white px-4 py-2 rounded hover:bg-green-600 transition duration-300">Give Feedback</button>
         </div>
 
         <div class="bg-white p-6 rounded-lg shadow-md hover:shadow-lg transition duration-300">
@@ -31,12 +31,12 @@
           </svg>
           <h2 class="text-xl font-semibold mb-2">Get Notifications</h2>
           <p class="text-gray-600 mb-4">Stay informed about important updates and announcements.</p>
-          <button class="bg-black text-white px-4 py-2 rounded hover:bg-purple-600 transition duration-300">Subscribe</button>
+          <button (click)="goToSubscription()" class="bg-black text-white px-4 py-2 rounded hover:bg-purple-600 transition duration-300">Subscribe</button>
         </div>
       </div>
     </div>
     <div class="flex items-center justify-center p-6 mt-8 lg:mt-0 h-72 sm:h-80 lg:h-96 xl:h-112 2xl:h-128">
-      <img src="./assets/images/Hero.png" alt="" class="object-contain h-72 sm:h-80 lg:h-96 xl:h-112 2xl:h-128">
+      <img src="../../../../assets/images/logo.png" alt="" class="object-contain h-72 sm:h-80 lg:h-96 xl:h-112 2xl:h-128">
     </div>
   </div>
 </section>
