--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -50,12 +50,10 @@
         tabindex="0"
         class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
         <li>
-          <a class="justify-between">
+          <a class="justify-between" routerLink="/profile">
             Profile
-            <span class="badge">New</span>
           </a>
         </li>
-        <li><a>Settings</a></li>
         <li><a>Logout</a></li>
       </ul>
     </div>
