--- a/src/app/pages/services/services.component.html
+++ b/src/app/pages/services/services.component.html
@@ -1,4 +1,10 @@
 <div class="my-10 p-3">
+  <a class="flex items-center gap-5 mb-10" routerLink="/">
+    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-8">
+      <path stroke-linecap="round" stroke-linejoin="round" d="M10.5 19.5 3 12m0 0 7.5-7.5M3 12h18" />
+    </svg>
+    <h1 class="text-3xl font-bold text-gray-800">Go Back Home</h1>
+  </a>
   <label class="input input-bordered flex items-center gap-2">
     <input type="text" class="grow" placeholder="Search" />
     <svg
